--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   font-src 'self' https://*.tawk.to wss://*.tawk.to;
   object-src 'self' https://*.tawk.to wss://*.tawk.to;
   base-uri 'self' https://*.tawk.to wss://*.tawk.to;
-  form-action 'self' https://fabform.io https://nowpayments.io;
+  form-action 'self' https://fabform.io https://nowpayments.io https://*.tawk.to wss://*.tawk.to;
   frame-ancestors 'none';
 ">
   
