--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
       https://www.google-analytics.com
       https://embed.tawk.to;
     style-src 'self' 'unsafe-inline';
-    img-src 'self' data: https://*.googlesyndication.com https://*.gstatic.com https://embed.tawk.to https://images.seeklogo.com https://cdn.pixabay.com https://pixabay.com;
+    img-src 'self' data: https://ipfs.io https://assets.sophos.com https://*.googlesyndication.com https://*.gstatic.com https://embed.tawk.to https://seeklogo.com https://images.seeklogo.com https://cdn.pixabay.com https://pixabay.com;
     frame-src https://embed.tawk.to https://pagead2.googlesyndication.com https://tpc.googlesyndication.com https://securepubads.g.doubleclick.net;
     connect-src 'self' https://pagead2.googlesyndication.com https://tpc.googlesyndication.com https://securepubads.g.doubleclick.net https://stats.g.doubleclick.net https://embed.tawk.to;
     font-src 'self';
