--- a/blog.html
+++ b/blog.html
@@ -56,8 +56,8 @@
       https://embed.tawk.to;
     style-src 'self' 'unsafe-inline';
     img-src 'self' data: https://ipfs.io https://assets.sophos.com https://*.googlesyndication.com https://*.gstatic.com https://embed.tawk.to https://seeklogo.com https://images.seeklogo.com https://cdn.pixabay.com https://pixabay.com;
-    frame-src https://embed.tawk.to https://pagead2.googlesyndication.com https://tpc.googlesyndication.com https://securepubads.g.doubleclick.net;
-    connect-src 'self' https://pagead2.googlesyndication.com https://tpc.googlesyndication.com https://securepubads.g.doubleclick.net https://stats.g.doubleclick.net https://embed.tawk.to;
+    frame-src https://embed.tawk.to https://pagead2.googlesyndication.com https://tpc.googlesyndication.com https://securepubads.g.doubleclick.net https://googleads.g.doubleclick.net;
+    connect-src 'self' https://pagead2.googlesyndication.com https://tpc.googlesyndication.com https://securepubads.g.doubleclick.net https://stats.g.doubleclick.net https://embed.tawk.to;;
     font-src 'self';
     object-src 'none';
     base-uri 'self';
@@ -125,6 +125,16 @@
       <p><a class="cta" href="services.html">View Sectigo & Certificate Services</a></p>
     </section>
 
+<!-- Example AdSense block -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9920132045090748"
+     data-ad-slot="1234567890"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
      <!-- New Article: GDPR — One Simple Step -->
