--- a/blog.html
+++ b/blog.html
@@ -197,6 +197,18 @@
         <a class="cta" href="services.html">Review Certificate & Compliance Services</a>
       </div>
     </article>   
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9920132045090748"
+     crossorigin="anonymous"></script>
+<!-- THQ-Ad400 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9920132045090748"
+     data-ad-slot="1414872910"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <!-- Article: Introducing Upcoming Security Products — DigiCert Code Signing, Email Security & WAF Solutions -->
 <article id="upcoming-security-products">
   <h2>Introducing New Security Products: DigiCert Code Signing, Email Protection & Web Application Firewall (WAF)</h2>
@@ -275,7 +287,17 @@
     >Share on Twitter</a>
   </div>
 </article>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9920132045090748"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-4l+cz+4w-jf+dc"
+     data-ad-client="ca-pub-9920132045090748"
+     data-ad-slot="9233653185"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     
     <!-- Article: Sophos Firewall v22 -->
 <article id="sophos-firewall-v22">
