--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
   default-src 'self';
   script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://embed.tawk.to https://*.tawk.to;
   style-src 'self' 'unsafe-inline'  https://embed.tawk.to https://*.tawk.to;
-  img-src 'self' data: https://ipfs.io https://images.seeklogo.com https://ipfs.tech https://seeklogo.com https://*.tawk.to https://embed.tawk.to https://s3.amazonaws.com;
+  img-src 'self' data: https://cww.verifytrustseal.com https://ipfs.io https://images.seeklogo.com https://ipfs.tech https://seeklogo.com https://*.tawk.to https://embed.tawk.to https://s3.amazonaws.com;
   frame-src https://www.youtube.com https://embed.tawk.to https://*.tawk.to https://w1.tawk.to;;
-  connect-src 'self' https://*.tawk.to wss://*.tawk.to;
-  font-src 'self' https://*.tawk.to wss://*.tawk.to;
-  object-src 'self' https://*.tawk.to wss://*.tawk.to;
-  base-uri 'self' https://*.tawk.to wss://*.tawk.to;
-  form-action 'self' https://fabform.io https://nowpayments.io https://*.tawk.to wss://*.tawk.to;
+  connect-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com;
+  font-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com;
+  object-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com;
+  base-uri 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com;
+  form-action 'self' https://fabform.io https://nowpayments.io https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com;
   frame-ancestors 'none';
 ">
   
@@ -189,6 +189,8 @@
       <a href="privacy.html" style="text-decoration:none;color:#fff">Privacy</a> |
       <a href="mailto:thqcs@protonmail.com" style="text-decoration:none;color:#fff">Contact</a>
     </nav>
+    <a href="https://cww.verifytrustseal.com/verification/
+eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkb21haW5JZCI6IjIzNjEzMCIsInRoZW1lIjoibGlnaHQiLCJob3N0bmFtZSI6ImxvZ2luLmN3YXRjaC5jb21vZG8uY29tIiwibGFuZ3VhZ2UiOiJlbiIsImlhdCI6MTc2OTg5Mzg0M30.-efGVCPkFj5AYakBI1h5zdoqAF2U84-JgDITxlwYMEY?clang=en" target="_blank"><img src="https://cww.verifytrustseal.com/seal/eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkb21haW5JZCI6IjIzNjEzMCIsInRoZW1lIjoibGlnaHQiLCJob3N0bmFtZSI6ImxvZ2luLmN3YXRjaC5jb21vZG8uY29tIiwibGFuZ3VhZ2UiOiJlbiIsImlhdCI6MTc2OTg5Mzg0M30.-efGVCPkFj5AYakBI1h5zdoqAF2U84-JgDITxlwYMEY?clang=en" style="max-width:240; max-height:120; position:fixed; right:0px; bottom:0px; z-index:9999" alt="cww trust seal"></a>
     <!--
       <div class="social" aria-label="social links">
 
