--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <a href="mailto:thqcs@protonmail.com" style="text-decoration:none;color:#fff">Contact</a>
     </nav>
     <a href="https://cww.verifytrustseal.com/verification/
-eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkb21haW5JZCI6IjIzNjEzMCIsInRoZW1lIjoibGlnaHQiLCJob3N0bmFtZSI6ImxvZ2luLmN3YXRjaC5jb21vZG8uY29tIiwibGFuZ3VhZ2UiOiJlbiIsImlhdCI6MTc2OTg5Mzg0M30.-efGVCPkFj5AYakBI1h5zdoqAF2U84-JgDITxlwYMEY?clang=en" target="_blank"><img src="https://cww.verifytrustseal.com/seal/eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkb21haW5JZCI6IjIzNjEzMCIsInRoZW1lIjoibGlnaHQiLCJob3N0bmFtZSI6ImxvZ2luLmN3YXRjaC5jb21vZG8uY29tIiwibGFuZ3VhZ2UiOiJlbiIsImlhdCI6MTc2OTg5Mzg0M30.-efGVCPkFj5AYakBI1h5zdoqAF2U84-JgDITxlwYMEY?clang=en" style="max-width:240; max-height:120; position:fixed; left:0px; bottom:0px; z-index:9999" alt="cww trust seal"></a>
+eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkb21haW5JZCI6IjIzNjEzMCIsInRoZW1lIjoibGlnaHQiLCJob3N0bmFtZSI6ImxvZ2luLmN3YXRjaC5jb21vZG8uY29tIiwibGFuZ3VhZ2UiOiJlbiIsImlhdCI6MTc2OTg5Mzg0M30.-efGVCPkFj5AYakBI1h5zdoqAF2U84-JgDITxlwYMEY?clang=en" target="_blank"><img src="https://cww.verifytrustseal.com/seal/eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkb21haW5JZCI6IjIzNjEzMCIsInRoZW1lIjoibGlnaHQiLCJob3N0bmFtZSI6ImxvZ2luLmN3YXRjaC5jb21vZG8uY29tIiwibGFuZ3VhZ2UiOiJlbiIsImlhdCI6MTc2OTg5Mzg0M30.-efGVCPkFj5AYakBI1h5zdoqAF2U84-JgDITxlwYMEY?clang=en" style="max-width:240; max-height:120; position:fixed; right:180px; bottom:0px; z-index:9999" alt="cww trust seal"></a>
     <!--
       <div class="social" aria-label="social links">
 
