--- a/index.html
+++ b/index.html
@@ -145,12 +145,13 @@
       </div>
 
       <div class="card">
-        <img src="https://images.seeklogo.com/logo-png/34/1/sectigo-limited-logo-png_seeklogo-344652.png" alt="Sectigo EV SSL">
-        <h3>EV SSL Certificate</h3>
-        <p>Single-domain EV validation. Display company name in browser for enhanced confidence and trust signals.</p>
+         <img src="http://ipfs.io/ipfs/QmWx1xqZwKgmggedEH4exyXKJwCoXFpJNsQo6DjAEPwDiE" alt="HackerGuardian PCI Scan Control Center" />
+        <h3>HackerGuardian PCI Scan Control Center</h3>
+       <p>HackerGuardian PCI Scan Control Center provides an on-demand security auditing service and PCI Scan compliance reports.
+Gain PCI scan compliance with vulnerability scanning by a PCI Approved Scanning Vendor.</p>
         <div class="controls">
-          <span class="badge">From $279.99/yr</span>
-          <a class="btn" href="https://nowpayments.io/payment/?iid=5091193372&source=button" target="_blank" rel="noopener">Order</a>
+          <span class="badge">$622.50/3yrs</span>
+          <a class="btn" href="https://nowpayments.io/payment/?iid=4565801205&source=button" target="_blank" rel="noopener">Order</a>
         </div>
       </div>
 
