--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
       <div class="card">
          <img src="http://ipfs.io/ipfs/QmWx1xqZwKgmggedEH4exyXKJwCoXFpJNsQo6DjAEPwDiE" alt="HackerGuardian PCI Scan Control Center" />
         <h3>HackerGuardian PCI Scan Control Center</h3>
-       <p>HackerGuardian PCI Scan Control Center provides an on-demand security auditing service and PCI Scan compliance reports.
-Gain PCI scan compliance with vulnerability scanning by a PCI Approved Scanning Vendor.</p>
+       <p>HackerGuardian PCI Scan Control Center provides an on-demand security auditing service and PCI Scan compliance reports.</p>
         <div class="controls">
           <span class="badge">$622.50/3yrs</span>
           <a class="btn" href="https://nowpayments.io/payment/?iid=4565801205&source=button" target="_blank" rel="noopener">Order</a>
@@ -191,7 +190,7 @@ Gain PCI scan compliance with vulnerability scanning by a PCI Approved Scanning 
       <a href="mailto:thqcs@protonmail.com" style="text-decoration:none;color:#fff">Contact</a>
     </nav>
     <a href="https://cww.verifytrustseal.com/verification/
-eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkb21haW5JZCI6IjIzNjEzMCIsInRoZW1lIjoibGlnaHQiLCJob3N0bmFtZSI6ImxvZ2luLmN3YXRjaC5jb21vZG8uY29tIiwibGFuZ3VhZ2UiOiJlbiIsImlhdCI6MTc2OTg5Mzg0M30.-efGVCPkFj5AYakBI1h5zdoqAF2U84-JgDITxlwYMEY?clang=en" target="_blank"><img src="https://cww.verifytrustseal.com/seal/eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkb21haW5JZCI6IjIzNjEzMCIsInRoZW1lIjoibGlnaHQiLCJob3N0bmFtZSI6ImxvZ2luLmN3YXRjaC5jb21vZG8uY29tIiwibGFuZ3VhZ2UiOiJlbiIsImlhdCI6MTc2OTg5Mzg0M30.-efGVCPkFj5AYakBI1h5zdoqAF2U84-JgDITxlwYMEY?clang=en" style="max-width:240; max-height:120; position:fixed; right:180px; bottom:0px; z-index:9999" alt="cww trust seal"></a>
+eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkb21haW5JZCI6IjIzNjEzMCIsInRoZW1lIjoibGlnaHQiLCJob3N0bmFtZSI6ImxvZ2luLmN3YXRjaC5jb21vZG8uY29tIiwibGFuZ3VhZ2UiOiJlbiIsImlhdCI6MTc2OTg5Mzg0M30.-efGVCPkFj5AYakBI1h5zdoqAF2U84-JgDITxlwYMEY?clang=en" target="_blank"><img src="https://cww.verifytrustseal.com/seal/eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkb21haW5JZCI6IjIzNjEzMCIsInRoZW1lIjoibGlnaHQiLCJob3N0bmFtZSI6ImxvZ2luLmN3YXRjaC5jb21vZG8uY29tIiwibGFuZ3VhZ2UiOiJlbiIsImlhdCI6MTc2OTg5Mzg0M30.-efGVCPkFj5AYakBI1h5zdoqAF2U84-JgDITxlwYMEY?clang=en" style="max-width:240; max-height:120; position:fixed; left:0px; bottom:0px; z-index:9999" alt="cww trust seal"></a>
     <!--
       <div class="social" aria-label="social links">
 
