--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
       </div>
 
       <div class="card">
-         <img src="http://ipfs.io/ipfs/QmWx1xqZwKgmggedEH4exyXKJwCoXFpJNsQo6DjAEPwDiE" alt="HackerGuardian PCI Scan Control Center" />
+         <img src="http://ipfs.io/ipfs/QmWx1xqZwKgmggedEH4exyXKJwCoXFpJNsQo6DjAEPwDiE" alt="HackerGuardian PCI Scan Control Center">
+        <br/><br/>
         <h3>HackerGuardian PCI Scan Control Center</h3>
        <p>HackerGuardian PCI Scan Control Center provides an on-demand security auditing service and PCI Scan compliance reports.</p>
         <div class="controls">
