Replace Dedicated Instance with DigiCert Secure Email

--- a/services.html
+++ b/services.html
@@ -331,25 +331,46 @@
   </div>
 </div>
 
-<!-- Dedicated Instance - 8 vCPU -->
+<!-- DigiCert Secure Email for Business (Premium) -->
 <div class="card">
-  <h3>Dedicated Instance - 8 vCPU</h3>
-  <p>Isolated instance, 8 vCPU, 32GB RAM, 300GB NVMe</p>
-  <img src="https://cdn.pixabay.com/photo/2020/06/25/14/21/server-icons-5339848_1280.png" alt="8vCPU Instance" />
-  <span class="badge">From $290/mo</span>
+  <h3>DigiCert Secure Email for Business (Premium)</h3>
 
-  <label for="os-select-8v">Operating System:</label>
-  <select id="os-select-8v">
-    <option value="linux">Linux</option>
-    <option value="windows">Windows</option>
+  <img src="http://ipfs.io/ipfs/QmdHUTQZ7ZXwJcj6AD8hrBMrz7Cpu9hQ5addPMSnqvNYe7"
+       alt="DigiCert Secure Email"
+       style="width:100%;border-radius:10px;margin:10px 0;">
+
+  <p>
+    Digitally sign and encrypt business emails to protect communications from
+    phishing, impersonation, and data leakage.
+  </p>
+
+  <ul>
+    <li>Email Signing: ✅</li>
+    <li>Email Encryption: ✅</li>
+    <li>Document Signing: ✅</li>
+    <li>Certificate Authentication: ✅</li>
+    <li>Adobe Supported: ❌</li>
+    <li>Device Licensing: Unlimited</li>
+  </ul>
+
+  <p><strong>Validation:</strong> OV</p>
+  <p><strong>Issuance:</strong> 0–2 Days</p>
+  <p><strong>Warranty:</strong> N/A</p>
+  <p><strong>Reissue:</strong> Unlimited</p>
+
+  <span class="badge">From $108.00/yr</span>
+
+  <label for="plan-select-digicert-email">Plan:</label>
+  <select id="plan-select-digicert-email">
+    <option value="one-year">1 Year</option>
+    <option value="two-years">2 Years</option>
   </select>
 
-  <div id="payment-button-8v" style="margin-top:10px;">
-    <a href="https://nowpayments.io/payment/?iid=DI8V-LINUX-ID&source=button" target="_blank" rel="noreferrer noopener">
-      <img src="https://nowpayments.io/images/embeds/payment-button-white.svg" alt="Cryptocurrency & Bitcoin payment button by NOWPayments">
-    </a>
+  <div id="payment-button-digicert-email" style="margin-top:10px;">
+    <!-- JS injects NOWPayments button -->
   </div>
 </div>
+
 
 <!-- Web Security -->
 <div class="card">
@@ -566,14 +587,24 @@ setupPayment(
   'yr'
 );
 
-// Previous setupPayment examples (left commented for reference)
-// setupPayment('os-select-small', 'payment-button-small', {'linux':'4617309514','windows':'4617309514'}, {'linux':'179','windows':'274'}, '€', 'mo');
-// setupPayment('os-select-medium', 'payment-button-medium', {'linux':'MEDIUM-LINUX-ID','windows':'MEDIUM-WINDOWS-ID'}, {'linux':'335','windows':'430'}, '€', 'mo');
-// setupPayment('os-select-large', 'payment-button-large', {'linux':'LARGE-LINUX-ID','windows':'LARGE-WINDOWS-ID'}, {'linux':'647','windows':'742'}, '€', 'mo');
-// setupPayment('os-select-4v', 'payment-button-4v', {'linux':'DI4V-LINUX-ID','windows':'DI4V-WINDOWS-ID'}, {'linux':'145','windows':'240'}, '$', 'mo');
-// setupPayment('os-select-8v', 'payment-button-8v', {'linux':'DI8V-LINUX-ID','windows':'DI8V-WINDOWS-ID'}, {'linux':'290','windows':'385'}, '$', 'mo');
-
 </script>
+<script>
+setupPayment(
+  'plan-select-digicert-email',
+  'payment-button-digicert-email',
+  {
+    'one-year':  '6041884820',
+    'two-years': '6345961913'
+  },
+  {
+    'one-year':  '108.00',
+    'two-years': '205.20'
+  },
+  '$',
+  'yr'
+);
+</script>
+
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
