Enhance services.html with PCI compliance details
Updated the description and added validation details for the HackerGuardian PCI Scan Control Center.

--- a/services.html
+++ b/services.html
@@ -377,11 +377,30 @@
   <h3>HackerGuardian PCI Scan Control Center</h3>
   <img src="http://ipfs.io/ipfs/QmWx1xqZwKgmggedEH4exyXKJwCoXFpJNsQo6DjAEPwDiE" alt="HackerGuardian PCI Scan Control Center" />
 
-	<p>HackerGuardian PCI Scan Control Center provides an on-demand security auditing service and PCI Scan compliance reports.
-Gain PCI scan compliance with vulnerability scanning by a PCI Approved Scanning Vendor.
-Get ready-to-submit PCI Compliance reports for your merchant bank.</p>
-	<p>Make your path to PCI compliance as simple as possible with this turn-key solution</p>
-   
+	<p>HackerGuardian PCI Scan Control Center provides an on-demand security auditing service and PCI Scan compliance reports. Gain PCI scan compliance with vulnerability scanning by a PCI Approved Scanning Vendor.</p>
+   <!-- HackerGuardian Compliance & Capabilities -->
+<p><strong>Validation Type:</strong> OV</p>
+<p><strong>Issuance:</strong> 1–3 Days</p>
+<p><strong>Reissue:</strong> Unlimited</p>
+<p><strong>Warranty:</strong> N/A</p>
+
+<ul style="list-style:none;padding-left:0;margin-top:10px;">
+  <li><strong>Email Signing:</strong> ✅ Yes</li>
+  <li><strong>Email Encryption:</strong> ✅ Yes</li>
+  <li><strong>Document Signing:</strong> ✅ Yes</li>
+  <li><strong>Certificate Authentication:</strong> ✅ Yes</li>
+  <li><strong>Server Support:</strong> ❌ No</li>
+  <li><strong>Device Licensing:</strong> Unlimited</li>
+</ul>
+
+<div style="margin-top:10px;">
+  <span class="badge">Business Validated</span>
+  <span class="badge">Mobile Friendly</span>
+  <span class="badge" style="background:#fee2e2;color:#991b1b;">
+    No Green Address Bar
+  </span>
+</div>
+
 	<span class="badge">From $249.00/yr</span>
 	<label for="plan-select-hg">Plan:</label>
   <select id="plan-select-hg">
