--- a/services.html
+++ b/services.html
@@ -377,13 +377,8 @@
   <h3>HackerGuardian PCI Scan Control Center</h3>
   <img src="http://ipfs.io/ipfs/QmWx1xqZwKgmggedEH4exyXKJwCoXFpJNsQo6DjAEPwDiE" alt="HackerGuardian PCI Scan Control Center" />
 
-	<p>HackerGuardian PCI Scan Control Center provides an on-demand security auditing service and PCI Scan compliance reports. Gain PCI scan compliance with vulnerability scanning by a PCI Approved Scanning Vendor.</p>
+	<p>HackerGuardian PCI Scan Control Center provides an on-demand security auditing service and PCI Scan compliance reports.</p>
    <!-- HackerGuardian Compliance & Capabilities -->
-<p><strong>Validation Type:</strong> OV</p>
-<p><strong>Issuance:</strong> 1–3 Days</p>
-<p><strong>Reissue:</strong> Unlimited</p>
-<p><strong>Warranty:</strong> N/A</p>
-
 <ul style="list-style:none;padding-left:0;margin-top:10px;">
   <li><strong>Email Signing:</strong> ✅ Yes</li>
   <li><strong>Email Encryption:</strong> ✅ Yes</li>
@@ -393,13 +388,12 @@
   <li><strong>Device Licensing:</strong> Unlimited</li>
 </ul>
 
-<div style="margin-top:10px;">
-  <span class="badge">Business Validated</span>
-  <span class="badge">Mobile Friendly</span>
-  <span class="badge" style="background:#fee2e2;color:#991b1b;">
-    No Green Address Bar
-  </span>
-</div>
+	<p><strong>Validation Type:</strong> OV</p>
+<p><strong>Issuance:</strong> 1–3 Days</p>
+<p><strong>Reissue:</strong> Unlimited</p>
+<p><strong>Warranty:</strong> N/A</p>
+
+
 
 	<span class="badge">From $249.00/yr</span>
 	<label for="plan-select-hg">Plan:</label>
