--- a/services.html
+++ b/services.html
@@ -230,9 +230,7 @@
   </style>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9920132045090748"
      crossorigin="anonymous"></script>
-	<script 
-  src="https://www.paypal.com/sdk/js?client-id=BAAiOGkOkHp0Ty5kSv9OEzfVo_uY1JCGt3KnqL4sze8MT2-E-Fe1pgRXfi-rwX-lXTPl97wmIQsl5CKJ3A&components=hosted-buttons&disable-funding=venmo&currency=USD">
-</script>
+
 </head>
 <body>
 
@@ -549,13 +547,11 @@
 <div id="payment-button-hg" style="margin-top:10px;">
   <!-- JS will inject the correct NOWPayments button here -->
 </div>
-
-<div id="paypal-container-5AFF56JXV4QZG"></div>
-<script>
-  paypal.HostedButtons({
-    hostedButtonId: "5AFF56JXV4QZG",
-  }).render("#paypal-container-5AFF56JXV4QZG")
-</script>
+<!--Paypal link -->
+<div style="margin-top:10px;">
+    <a href="https://www.paypal.com/ncp/payment/5AFF56JXV4QZG" target="_blank" rel="noreferrer noopener">
+    </a>
+  </div>
 	
 </div>
 
