--- a/services.html
+++ b/services.html
@@ -548,10 +548,10 @@
   <!-- JS will inject the correct NOWPayments button here -->
 </div>
 <!--Paypal link -->
-<div style="margin-top:10px;">
+<!--div style="margin-top:10px;"-->
     <a href="https://www.paypal.com/ncp/payment/5AFF56JXV4QZG" target="_blank" rel="noreferrer noopener">
     </a>
-  </div>
+  <!--/div-->
 	
 </div>
 
