--- a/services.html
+++ b/services.html
@@ -549,8 +549,8 @@
 </div>
 <!--Paypal link -->
 <!--div style="margin-top:10px;"-->
-    <a href="https://www.paypal.com/ncp/payment/5AFF56JXV4QZG" target="_blank" rel="noreferrer noopener">
-    </a>
+   <a class="btn" href="https://www.paypal.com/ncp/payment/5AFF56JXV4QZG" target="_blank" rel="noreferrer noopener">Pay with PayPal</a>
+	
   <!--/div-->
 	
 </div>
