--- a/services.html
+++ b/services.html
@@ -87,7 +87,6 @@
   script-src 'self' 'unsafe-inline'
     https://www.googletagmanager.com
     https://embed.tawk.to
-	https://www.paypal.com
     https://*.tawk.to;
   style-src 'self' 'unsafe-inline'
     https://embed.tawk.to
@@ -103,7 +102,6 @@
     https://www.master.cz
     https://seeklogo.com
     https://images.seeklogo.com
-	https://www.paypal.com
     https://assets.sophos.com
     https://*.tawk.to
     https://cdn.tawk.to
@@ -111,11 +109,11 @@
     https://static.tawk.to;
 	
   frame-src https://embed.tawk.to https://*.tawk.to https://www.paypal.com;
-  connect-src 'self' https://*.tawk.to wss://*.tawk.to https://www.paypal.com;
-  font-src 'self' https://*.tawk.to wss://*.tawk.to https://www.paypal.com;
-  object-src 'self' https://*.tawk.to wss://*.tawk.to https://www.paypal.com;
-  base-uri 'self' https://*.tawk.to wss://*.tawk.to https://www.paypal.com;
-  form-action 'self' https://*.tawk.to wss://*.tawk.to https://www.paypal.com;
+  connect-src 'self' https://*.tawk.to wss://*.tawk.to;
+  font-src 'self' https://*.tawk.to wss://*.tawk.to
+  object-src 'self' https://*.tawk.to wss://*.tawk.to;
+  base-uri 'self' https://*.tawk.to wss://*.tawk.to;
+  form-action 'self' https://*.tawk.to wss://*.tawk.to\;
 ">
 
 <!-- ======================================================= -->
