--- a/services.html
+++ b/services.html
@@ -108,7 +108,7 @@
     https://w1.tawk.to
     https://static.tawk.to;
 	
-  frame-src https://embed.tawk.to https://*.tawk.to https://www.paypal.com;
+  frame-src https://embed.tawk.to https://*.tawk.to;
   connect-src 'self' https://*.tawk.to wss://*.tawk.to;
   font-src 'self' https://*.tawk.to wss://*.tawk.to
   object-src 'self' https://*.tawk.to wss://*.tawk.to;
