--- a/services.html
+++ b/services.html
@@ -307,6 +307,8 @@
   <div id="payment-button-enterprise-ev" style="margin-top:10px;">
     <!-- JS injects NOWPayments button -->
   </div>
+	<br/>
+   <a class="btn" href="https://www.paypal.com/ncp/payment/CQ2D2L59XCBXJ" target="_blank" rel="noreferrer noopener">Pay with PayPal</a>
 </div>
 
 <!-- PositiveSSL EV -->
@@ -365,6 +367,8 @@
   <div id="payment-button-positivessl-ev" style="margin-top:10px;">
     <!-- JS injects NOWPayments button -->
   </div>
+	<br/>
+   <a class="btn" href="https://www.paypal.com/ncp/payment/542ZRUGQJLYYE" target="_blank" rel="noreferrer noopener">Pay with PayPal</a>
 </div>
 
 <!-- Comodo EV SSL Certificate -->
@@ -425,6 +429,8 @@
   <div id="payment-button-comodo-ev" style="margin-top:10px;">
     <!-- JS injects NOWPayments button -->
   </div>
+	<br/>
+   <a class="btn" href="https://www.paypal.com/ncp/payment/ZT5XUYWMJR95J" target="_blank" rel="noreferrer noopener">Pay with PayPal</a>
 </div>
 
 
@@ -471,6 +477,8 @@
   <div id="payment-button-digicert-smime-class1" style="margin-top:10px;">
     <!-- JS injects NOWPayments button -->
   </div>
+	<br/>
+   <a class="btn" href="https://www.paypal.com/ncp/payment/FP548KVLTTYDW" target="_blank" rel="noreferrer noopener">Pay with PayPal</a>
 </div>
 
 
@@ -512,6 +520,8 @@
   <div id="payment-button-digicert-email" style="margin-top:10px;">
     <!-- JS injects NOWPayments button -->
   </div>
+	<br/>
+   <a class="btn" href="https://www.paypal.com/ncp/payment/LD5T9VJYKEPUJ" target="_blank" rel="noreferrer noopener">Pay with PayPal</a>
 </div>
 
 
